@@ -26,6 +26,14 @@
 						</label>
 					</div>
 				</div>
+				<div class="form-group">
+					<div class="checkbox">
+						<label>
+							<input type="checkbox" name="groupruns" id="tx_devlog_groupruns" value="groupruns">
+							<f:translate id="groupRuns" />
+						</label>
+					</div>
+				</div>
 			</div>
 		</form>
 		<div class="clearfix"></div>
@@ -98,6 +106,7 @@
 						<f:translate id="extraData" />
 						<span id="tx_devlog_expand_all_icon"><core:icon identifier="actions-view-list-expand" /></span>
 					</th>
+					<th class="entry-id hidden">&nbsp;</th>
 				</tr>
 			</thead>
 		</table>
